elkstack/templates/elasticsearch-service.yml
apiVersion: v1
kind: Service
metadata:
  name: elasticsearch-service
spec:
  clusterIP: None
  selector:
    app: elasticsearch-statefulset
  ports:
  - name: web
    port: 9200
    targetPort: 9200
  - name: cluster
    port: 9300
    targetPort: 9300
