elkstack/templates/elasticsearch-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
 name: elasticsearch-ingress
 annotations:
   nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: elasticsearch.baris.com
    http:
      paths:
      - path: "/"
        pathType: Prefix
        backend:
          service:
            name: elasticsearch-service
            port:
              number: 9200
